--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <li><a href="index.html"> Home </a></li>
                         <li><a href="products.html">Product </a></li>
                         <li><a href=""> About </a></li>
-                        <li><a href=""> Contact </a></li>
+                        <li><a href="contact-page.html"> Contact </a></li>
                         <li><a href="account.html"> Account </a></li>
                     </ul>
                 </nav>
